--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8"/>
-        <link rel="stylesheet" href="maquette.css"/>
+        <link rel="stylesheet" href="style.css"/>
         <title>ParBa - Assistante</title>
     </head>
     <body>
